# VMD

./: AGENTS.md  README.md  VideotoMMD.py  check_video.py  converter.py  debug_video.py  main.py  motion_data.npy  output.vmd  output1.vmd  pose_math.py  pyproject.toml  skeleton_viewer.py  test.vmd  test_writer.py  tracker.py  visualize.py  vmd_writer.py
Output/: head_motion.vmd  motion.vmd
src/video2vmd/: __init__.py  cli.py  models.py  pipeline.py  pose_sources.py  rotation.py  skeleton.py  vmd_writer.py
src/video2vmd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline.py  test_pose_sources.py  test_rotation.py  test_skeleton.py
